fix text alignment and alignment

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding:0;
     box-sizing: border-box;
     background-color: hsl(212, 45%, 89%);
+    font-family: 'Outfit', sans-serif;
 }
 
 .container{
@@ -11,36 +12,47 @@
     align-content: center;
     justify-content: center;
     display: flex;
-    
-    
+       
 }
 .box{
-    margin-top: 140px;
+    margin-top: 110px;
     margin-left: 20%;
-    height:60vh;
+    height:70vh;
     width:20vw;
-    background-color: white;
+    background-color:  hsl(0, 0%, 100%);
     color: black;
+    padding:16px;           
     border-radius: 20px;
      align-content: center;
     justify-content: center;
     
-
+    
 }
+.box img{
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
+  display: block;
+}
+   
 h2{
-    margin-top: 210px;
-     background-color: white;
+    margin-top: 20px;
+     background-color:   hsl(0, 0%, 100%);
      align-items: center;
      justify-content: center;
      font-weight: 700;
      padding-left: 30px;
      padding-right: 30px;
+     text-decoration: none;
+     
 }
-h3{
-     background-color: white;
-     align-items: center;
-     justify-content: center;
+p{
+    
+     background-color:  hsl(0, 0%, 100%);
      font-weight: 400;
+     padding-top: 20px;
      padding-left: 30px;
      padding-right: 30px;
+     text-decoration: none;
+    
 }
